[gd_scene load_steps=5 format=3 uid="uid://brtyxhrva77nw"]

[ext_resource type="Texture2D" uid="uid://d3bmbfngfdv2b" path="res://assets/space.jpg" id="1_0ghfe"]
[ext_resource type="Script" uid="uid://bntoeyhai73n4" path="res://scripts/space.gd" id="1_dtwn4"]
[ext_resource type="PackedScene" uid="uid://duejuwnquekhy" path="res://scenes/transition_player.tscn" id="3_dtwn4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jl3r"]
size = Vector2(1944.1, 1968.94)

[node name="Space" type="Node2D"]
script = ExtResource("1_dtwn4")

[node name="SpaceSprite" type="Sprite2D" parent="."]
position = Vector2(593, 483)
scale = Vector2(0.483, 0.483)
texture = ExtResource("1_0ghfe")

[node name="SpaceArea" type="Area2D" parent="SpaceSprite"]
position = Vector2(-1225.67, -987.578)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceSprite/SpaceArea"]
position = Vector2(988.613, 986.542)
shape = SubResource("RectangleShape2D_0jl3r")

[node name="TransitionPlayer" parent="." instance=ExtResource("3_dtwn4")]

[connection signal="input_event" from="SpaceSprite/SpaceArea" to="." method="_on_spaceArea_mouse_clicked"]
[connection signal="mouse_entered" from="SpaceSprite/SpaceArea" to="." method="_on_spaceArea_mouse_entered"]
[connection signal="mouse_exited" from="SpaceSprite/SpaceArea" to="." method="_on_spaceArea_mouse_exited"]
